# capture202510

./: .gitignore  HAND_EYE_CALIBRATION_GUIDE.md  POSE_ESTIMATION_EXPLAINED.md  QUICKSTART_HAND_EYE.md  QUICKSTART_TABLE_POSE.md  README_CHARUCO.md  T_camera2end.txt  aruco_verification.py  auto_calibration.py  best_hand_eye_calibration.npy  calibration_eye_hand.py  calibration_result_example.txt  check.py  coordinate_transformation_summary.md  eye_in_hand2.0_charuco.py  eye_in_hand2.0_charuco_1.py  eye_in_hand2.0_charuco_2.py  generate_aruco_marker.py  generate_charuco_board.py  hand_eye_calib_left.npy  hand_eye_calib_right.npy  hand_eye_calibration.py  hand_fingertip_calibration.py  hand_fingertip_calibration_aruco.py  lch_hand_eye_calibration.py  left_calibration.txt  left_function.py  lid_function.py  lid_function_debug.py  lid_function_debug2.py  main.py  move_free.py  move_robot_preset.py  planning.py  pyproject.toml  readme.md  requirements.txt  right_calibration.npy  right_eye_calibration.txt  scales_function.py  (+21 more)
collect_data/: poses.txt
demo/: detect.py  detect1.py  detect_yoloworld.py
docs/: ARUCO_VERIFICATION_GUIDE.md  CAMERA_USAGE.md  CHARUCO_BOARD_GUIDE.md  MULTI_INSTANCE_DETECTION.md  POSE_FLOW_SIMPLE.md  SPOON_HEAD_DETECTION.md  TABLE_ASSISTED_POSE.md  VISUALIZATION.md
hand_eye_calibration_data/: base_to_end_transforms.npy  cam_to_board_transforms.npy
lib/: __init__.py  camera.py  dobot.py  dobot_api.py  inspire_hand.py  inspire_hand_sdk.py  mask2pose.py  mask2pose10161325太长了.py  object_pose.py  robot.py  robot_ui.py  yolo_and_sam.py  (+1 more)
(+3 files in other folders)
